Strings Second Assignment/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\apache-csv.jar;C:\Program Files (x86)\BlueJ\lib\userlib\courserajava.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;G:\My Drive\SID\TEMP\MOOCs\Coursera\Java Programming- Solving Problems with Java\Project4- StringsSecondAssignment
-d
G:\My Drive\SID\TEMP\MOOCs\Coursera\Java Programming- Solving Problems with Java\Project4- StringsSecondAssignment\doc
-encoding
UTF-8
-charset
UTF-8
G:\My Drive\SID\TEMP\MOOCs\Coursera\Java Programming- Solving Problems with Java\Project4- StringsSecondAssignment\part1.java
<---- end of javadoc command ---->
Loading source file G:\My Drive\SID\TEMP\MOOCs\Coursera\Java Programming- Solving Problems with Java\Project4- StringsSecondAssignment\part1.java...
G:\My Drive\SID\TEMP\MOOCs\Coursera\Java Programming- Solving Problems with Java\Project4- StringsSecondAssignment\part1.java:1: error: unclosed character literal
Pumpers' Paradise
       ^
G:\My Drive\SID\TEMP\MOOCs\Coursera\Java Programming- Solving Problems with Java\Project4- StringsSecondAssignment\part1.java:18: error: unclosed string literal
    System.out.println("I
                       ^
G:\My Drive\SID\TEMP\MOOCs\Coursera\Java Programming- Solving Problems with Java\Project4- StringsSecondAssignment\part1.java:18: error: ';' expected
    System.out.println("I
                         ^
G:\My Drive\SID\TEMP\MOOCs\Coursera\Java Programming- Solving Problems with Java\Project4- StringsSecondAssignment\part1.java:20: error: reached end of file while parsing
}
 ^
4 errors
